<resources>
    <string name="app_name">Taxi app</string>
    <string name="i_am_driver">I am driver</string>
    <string name="i_am_client">I am client</string>
    <string name="choose_yours_role">CHOOSE YOUR ROLE</string>
    <string name="something_goes_wrong">Somethink goes wrong</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_an_acout">Create an Acout</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="car_model">Car mark and model</string>
    <string name="car_number">Car number</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone">Phone</string>
    <string name="minimal_length_6_symbols">Minimal length 6 symbols</string>
    <string name="field_must_filled">Field must be filled</string>
    <string name="create_order">Create order</string>
    <string name="device_not_supported">This device is not supported.</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="price">Price: </string>
    <string name="length">Length: </string>
    <string name="time">Time:</string>
    <string name="cannot_find_address">We cannot find this address, try enother</string>
    <string name="fields_must_filled">Fields must be filled</string>
    <string name="no_interner">No internet connection</string>
    <string name="your_location">Your location</string>
    <string name="search_car">Searching car</string>
    <string name="order_geted">Order geted. Waiting for a driver</string>
    <string name="driver_by_origin">Driver by origin, pleasant journey</string>
    <string name="you_need_pay">You need to pay</string>
    <string name="thanks_for_using_taxi_app">Thanks for using Taxi app</string>
    <string name="order_was_canceled">Your order was canceled</string>
    <string name="order">Order</string>
    <string name="get">GET</string>
    <string name="by_norigin">By \norigin</string>
    <string name="by_ndestination">By \ndestination</string>
    <string name="payed">Payed</string>
</resources>
