<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSignInCardBackgrounf"
        android:orientation="vertical"
        android:paddingBottom="@dimen/cardview_tb_padding"
        android:paddingLeft="@dimen/cardview_lr_padding"
        android:paddingRight="@dimen/cardview_lr_padding"
        android:paddingTop="@dimen/cardview_tb_padding">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/views_margin"
            android:textColorHint="#fff">

            <com.kerer.taxiapp.custom_views.RobotoRegularEditText
                android:id="@+id/fragment_sign_up_email_ed"
                style="@style/SignInEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/views_margin"
            android:textColorHint="#fff">

            <com.kerer.taxiapp.custom_views.RobotoRegularEditText
                android:id="@+id/fragment_sign_up_password_ed"
                style="@style/SignInEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/views_margin"
            android:textColorHint="#fff">

            <com.kerer.taxiapp.custom_views.RobotoRegularEditText
                android:id="@+id/fragment_sign_up_name_ed"
                style="@style/SignInEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/views_margin"
            android:textColorHint="#fff">

            <com.kerer.taxiapp.custom_views.RobotoRegularEditText
                android:id="@+id/fragment_sign_up_surname_ed"
                style="@style/SignInEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/views_margin"
            android:textColorHint="#fff">

            <com.kerer.taxiapp.custom_views.RobotoRegularEditText
                android:id="@+id/fragment_sign_up_phone_ed"
                style="@style/SignInEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <com.kerer.taxiapp.custom_views.RoboroRegularButton
            android:id="@+id/fragment_sign_up_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/views_margin"
            android:background="@drawable/accent_buttons_riple_background"
            android:text="@string/create_an_acout"
            android:textColor="@android:color/white" />

    </LinearLayout>
</android.support.v7.widget.CardView>