<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.kerer.taxiapp.custom_views.RobotoRegularTextView
        android:id="@+id/order_views_client_order_status_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhitetransparent"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/create_order"
        android:textColor="@color/colorOrderTextViewColor" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/order_views_client_create_order_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_above="@+id/order_views_client_order_details_card"
        android:src="@drawable/ic_fab_create_order"
        app:layout_anchor="@id/order_views_client_order_details_card"
        app:layout_anchorGravity="top|right"
        app:backgroundTint="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/order_views_client_order_details_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_gravity="bottom">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorOrderTextViewColor">

            <com.kerer.taxiapp.custom_views.RobotoRegularEditText
                android:id="@+id/order_views_client_route_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/from"
                android:textColor="@color/colorOrderTextViewColor"
                android:textColorHint="@color/colorOrderTextViewColor"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorOrderTextViewColor">

            <com.kerer.taxiapp.custom_views.RobotoRegularEditText
                android:id="@+id/order_views_client_route_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/to"
                android:textColor="@color/colorOrderTextViewColor"
                android:textColorHint="@color/colorOrderTextViewColor"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <com.kerer.taxiapp.custom_views.RobotoRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                style="@style/MyTvStyle"
                />

            <com.kerer.taxiapp.custom_views.RobotoRegularTextView
                android:id="@+id/order_views_client_order_price_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/MyTvStyle"

                android:text="10 usd" />

            <com.kerer.taxiapp.custom_views.RobotoRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length"
                style="@style/MyTvStyle"
                />

            <com.kerer.taxiapp.custom_views.RobotoRegularTextView
                android:id="@+id/order_views_client_order_length_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/MyTvStyle"

                android:text="2.3 km" />

            <com.kerer.taxiapp.custom_views.RobotoRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MyTvStyle"
                android:text="@string/time" />

            <com.kerer.taxiapp.custom_views.RobotoRegularTextView
                android:id="@+id/order_views_client_order_time_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/MyTvStyle"
                android:text="120 minits"/>

        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>